fix jump before render

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -240,6 +240,8 @@ nav .r-col .button {
 }
 nav .r-col .button:hover { color: #fff; background: var(--dark-blue); }
 
+nav .r-col picture img { height: 132px; width: 240px; }
+
 nav .r-col p:not(:first-child) picture img { margin-top: 30px }
 
 /* hamburger button */
